# vmec_deltaB

./: .gitmodules  CMakeLists.txt  readme.md  test.py
data/: satire_kink.h5
src/: array_manipulation.h  fourier_array.h  kokkos.h  main.cpp  set_architecture.h  types.h
src/computation/: array_manipulation.h  array_math.h  array_reduce.h  compute.h  functions.h  launch_kernel.h  linspace.h  mask.h  random.cpp  random.h  random_transformations.h  sort.h  statistic.h
src/computation/local_array/: binary_operators.h  generators.h  linalg.h  local_array.h  print.h  template_util.h  unary_operators.h
src/io/: h5.h
src/io/input/: input.h  read_h5.h
src/io/output/: format_array.h  logger.h  output.h  pretty_print.cpp  pretty_print.h  pretty_print.impl.h  print.h  print_complex.h  progress_bar.h  to_file.h  util.h
src/util/: template_util.h
